// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`end 1`] = `
Object {
  "endX": 1,
  "endY": 2,
  "startX": 0,
  "startY": 0,
}
`;

exports[`end 2`] = `
Object {
  "endX": 3,
  "endY": 4,
  "startX": 0,
  "startY": 0,
}
`;

exports[`points 1`] = `
Array [
  0,
  0,
  50,
  0,
  0,
  50,
  50,
  50,
]
`;

exports[`start 1`] = `
Object {
  "endX": 50,
  "endY": 50,
  "startX": 1,
  "startY": 2,
}
`;

exports[`start 2`] = `
Object {
  "endX": 50,
  "endY": 50,
  "startX": 3,
  "startY": 4,
}
`;
